--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
           </div>
           <!--row under pictures-->
           <div class="row"></div>
+          <h1>Welcome to My Site!</h1>
           <div class="row">
 
             <!-- columns -->
-                      <div class="col-md-5 sections" id="aboutme">
-                        <h1>About Me</h1>
+                      <div class="col-md-5 sections2" id="aboutme">
+                        <h2>About Me</h2>
                         <p>I am an avid traveler and have spent many years traveling the US and to other countries.In my free time I like to read and keep up with my favorite TV shows.</p>
                      </div>
                      <div class="col-md-2"></div>
-                     <div class="col-md-5 sections">
-                        <h1>Work History</h1>
+                     <div class="col-md-5 sections2">
+                        <h2>Work History</h2>
                         <p>I am an accountant living in central connecticut. I have a Bachelor's degree in accounting, a Master's Degree in Accounting and Finance, and I am a Certified Public Accountant. I've worked for privately owned companies, non profits, and large corporations.</p>
                      </div>
          </div>
